syntax = "proto3";

package user_service;

option go_package = "shared/proto/user_service";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
}

message CreateUserRequest {
  string email = 1;
}

message CreateUserResponse {
  uint32 id = 1;
  string email = 2;
  string message = 3;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  uint32 id = 1;
  string email = 2;
  string status = 3;
} 